[package]
name = "rust-proxy-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
futures = "0.3"
bytes = "1.5.0"
sha2 = "0.10.8"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
lru = "0.12.1"
async-trait = "0.1.74"
